--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@tailwindcss/postcss": "^4.1.16",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,7 +26,6 @@
     "react-hook-form": "^7.64.0",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.16",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -35,9 +33,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "tw-animate-css": "^1.4.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
 }
