--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "^15.5.7",
     "next-intl": "^4.5.3",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.2.1",
